<resources>
    <string name="app_name">Yours</string>
    <string name="continuar">Continuar</string>
    <string name="voltar_menu">Voltar ao Menu</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">ou Cadastre-se!</string>
    <string name="user_name">Nome do Usuário</string>
    <string name="welcome">"Bem vindo!"</string>
    <string name="invalid_username">Não é um email válido</string>
    <string name="invalid_password">A senha precisa ter mais de 5 caracteres</string>
    <string name="login_failed">"O login falhou"</string>
    <string name="statue_store">"Statue Store"</string>
    <string name="yours">"YOURS"</string>
    <string name="esqueci_senha">"Esqueci minha Senha"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home_website">http://www.google.com</string>
    <string name="account_website">http://nossosite.com/conta.aspx</string>
    <string name="orders_website">http://nossosite.com/pedidos.aspx</string>
    <string name="password_website">http://nossosite.com/trocarsenha.aspx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="title_activity_dfdfdf">dfdfdf</string>
</resources>
