<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        app:srcCompat="?attr/actionModeCloseDrawable"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/statue_store"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/open_sans"
        android:text="Para começar, preencha com seus dados:"
        android:textAlignment="center"
        android:textColor="@color/black75"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEmail"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="259dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="Senha"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="325dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfSenha"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="Confirme sua Senha"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="396dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNome"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="361dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ems="10"
                    android:hint="Nome"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="259dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtSobrenome"
                        android:layout_width="210dp"
                        android:layout_height="47dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:ems="10"
                        android:hint="Sobrenome"
                        android:inputType="textPersonName|textEmailAddress"
                        tools:layout_editor_absoluteX="43dp"
                        tools:layout_editor_absoluteY="325dp" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerSexo"
                    android:layout_width="150dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="11dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtCPF"
                        android:layout_width="230dp"
                        android:layout_height="51dp"
                        android:layout_marginStart="24dp"
                        android:ems="10"
                        android:hint="CPF"
                        android:inputType="number|textPassword"
                        tools:layout_editor_absoluteX="47dp"
                        tools:layout_editor_absoluteY="396dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtDataNasc"
                        android:layout_width="214dp"
                        android:layout_height="51dp"
                        android:ems="10"
                        android:hint="Data Nasc."
                        android:inputType="number|textPassword"
                        tools:layout_editor_absoluteX="47dp"
                        tools:layout_editor_absoluteY="396dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/continuar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/open_sans"
        android:linksClickable="true"
        android:onClick="startLogin"
        android:text="Já tem uma conta? Entre agora"
        android:textColor="@color/blueLink"
        android:textColorHighlight="@color/secondaryPink"
        android:textSize="18sp" />

</LinearLayout>